--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,22 +1,22 @@
-server:
+#server:
 #  ssl:
 #    key-store: classpath:keystore_test.p12
 #    key-store-password: qkqh321@
 #    key-store-type: PKCS12
 #    key-alias: key_test
 #  address: 192.168.56.1
-  port: 8081
+#  port: 8443
 
 spring:
   datasource:
-    url: jdbc:h2:tcp://127.0.0.1/~/fitnessdb;
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+    url: jdbc:oracle:thin:@172.18.0.5:1521:xe
+    username: C##yunhwan
+    password: 1234
+    driver-class-name: oracle.jdbc.OracleDriver
 
   jpa:
     hibernate:
-#      ddl-auto: create
+      #      ddl-auto: create
       ddl-auto: none
     properties:
       hibernate:
